# police_scanner

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  AUDIO_ENHANCEMENT_DEPLOYMENT.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.txt  DEPLOY_NOW.md  DEPLOY_SCRIPT.sh  EXECUTION_SUMMARY.md  FINAL_REPORT.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINTENANCE.md  Makefile  OPTIMIZATION_SUMMARY.md  PIPELINE.md  QUICKSTART.md  QUICK_START.txt  README.md  README_DEPLOYMENT.md  config.yaml.example  db_analysis.py  deploy_db.sh  deploy_to_docker_host.sh  docker-compose.yml  download_calls.py  env_config.py  keywords.txt  parse_and_alert.py  pyproject.toml  remote_deploy.sh  transcribe_audio.py  verify_deployment.sh  (+1 more)
.claude/: settings.local.json
.claude/agents/: api-agent.md  database-agent.md  docker-ops.md  frontend-agent.md  scheduler-agent.md  transcription-agent.md  type-sync-agent.md
.claude/context/: PATTERNS.md  SCHEMA_REFERENCE.md
.claude/skills/: celery-worker.md  db-migration.md  docker-ops.md  fastapi-router.md  firebase-auth.md  git-ops.md  log-scanner.md  meilisearch.md  minio-s3.md  nginx-config.md  pydantic-models.md  query-optimizer.md  react-component.md  react-query.md  redis-ops.md  scheduler.md  security-audit.md  test-runner.md  ts-api-client.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-staging.yml  docker-build.yml  promote-to-main.yml
app_api/: .dockerignore  Dockerfile  config.py  database.py  main.py  requirements.txt
app_api/auth/: __init__.py  firebase.py  (+1 more)
app_ingest/: Dockerfile  collector.py  download_calls.py  requirements.txt
app_scheduler/: Dockerfile  audio_worker.py  db.py  db_pool.py  get_cache_common_data.py  get_calls.py  get_counties.py  get_countries.py  get_playlists.py  get_states.py  monitor_data_integrity.py  requirements.txt  scheduler.py  transcription_dispatcher.py
app_transcribe/: Dockerfile  keywords.txt  parse_and_alert.py  requirements.txt  transcribe_audio.py  worker.py
app_transcription/: requirements.txt  transcribe_audio.py
conf/: README.md  config.yaml.example  meili_create_index.sh  run_scanner.sh
db/: Dockerfile  IMPLEMENTATION_READY.txt  MIGRATION_GUIDE.md  README_EXPERT_DBA_ANALYSIS.md  SCHEMA_CHANGELOG.md  START_HERE.md  docker_migrate.py  execute_final.py  execute_migrations.py  execute_now.py  init.sql  migration_validator.py  monitoring_queries.sql  run_migrations.py
docs/: README.md  SECRETS.md
frontend/: .eslintrc.json  .prettierignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  package.json.new  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: README.md  backup-config.sh  backup-db.sh  deploy.sh  disk-cleanup.sh  install-backup.sh  restore-db.sh  run-tests.sh  setup-dev.sh  smoke-test.sh  staging-tests.sh
shared_bcfy/: auth.py  token_cache.py
(+149 files in other folders)
